--- a/speakers.html
+++ b/speakers.html
@@ -834,6 +834,7 @@
                       >
                       <a class="dropdown-item" href="judges.html">Judges</a>
                     </div>
+                    <!-- Speaker - Nandini Sukumar -->
 
                     <!-- Speaker Modal 13 - Akane Zoukpo Sanankoua -->
                     <div
@@ -1637,12 +1638,40 @@
               <div class="speaker-info">
                 <h3>Akane Zoukpo Sanankoua</h3>
                 <h4>Division Manager, Capital Markets Development, AfDB</h4>
-                
+
                 <a
                   href="#"
                   class="speaker-btn"
                   data-toggle="modal"
                   data-target="#speakerModal13"
+                >
+                  View Profile
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="speaker-card" data-category="global">
+              <div class="speaker-image">
+                <img src="img/speakers/Nandini.jpg" alt="Nandini Sukumar" />
+                <div class="speaker-category">CEO</div>
+                <div class="speaker-overlay">
+                  <div class="speaker-social">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fas fa-globe"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="speaker-info">
+                <h3>Nandini Sukumar</h3>
+                <h4>Chief Executive Officer, World Federation of Exchanges</h4>
+
+                <a
+                  href="#"
+                  class="speaker-btn"
+                  data-toggle="modal"
+                  data-target="#speakerModal14"
                 >
                   View Profile
                 </a>
@@ -1747,6 +1776,77 @@
                     <p>
                       Date: November 26, 2025 | Time: 10:00 AM - 11:30 AM |
                       Venue: Main Hall
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal 14 - Nandini Sukumar -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModal14"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img src="img/speakers/Nandini.jpg" alt="Nandini Sukumar" />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-globe"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Nandini Sukumar</h3>
+                  <h4>
+                    Chief Executive Officer, World Federation of Exchanges
+                  </h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Nandini Sukumar is the Chief Executive Officer of the
+                      World Federation of Exchanges, the global association for
+                      exchanges and CCPs. The WFE represents more than 250
+                      exchanges and clearing houses globally, educating
+                      stakeholders on the vital role played by market
+                      infrastructures in the real economy and as a standard
+                      setter, finding the consensus on issues among the global
+                      membership. Of our members, 37% are in Asia-Pacific, 44%
+                      in EMEA and 19% in the Americas. WFE’s 87 member CCPs and
+                      clearing services collectively ensure that risk takers
+                      post some $1.3 trillion (equivalent) of resources to back
+                      their positions, in the form of initial margin and default
+                      fund requirements. WFE exchanges, together with other
+                      exchanges feeding into our database, are home to over
+                      51,000 listed companies, and the market capitalisation of
+                      these entities is over $110 trillion; around $140 trillion
+                      (EOB) in trading annually passes through WFE members (at
+                      end 2024). Ms. Sukumar is Vice Chair of IOSCO’s Affiliate
+                      Members Consultative Committee and Chair of the AMCC’s
+                      Sustainability Taskforce.
                     </p>
                   </div>
                 </div>
