--- a/speakers.html
+++ b/speakers.html
@@ -1936,33 +1936,59 @@
               <div class="col-md-8">
                 <div class="speaker-modal-info">
                   <h3>Pierre Celestin Rwabukumba</h3>
-                  <h4>CEO, ASEA</h4>
+                  <h4>CEO, RSE & President, ASEA</h4>
                   <div class="speaker-modal-bio">
                     <p>
-                      Pierre Celestin Rwabukumba serves as the Chief Executive
-                      Officer of the African Securities Exchanges Association
-                      (ASEA), where he leads the continental organization's
-                      mission to develop and integrate African capital markets.
+                      Mr. Pierre Celestin RWABUKUMBA, a Rwandan national, is the
+                      current President of the African Securities Exchanges
+                      Association (ASEA), Former Chairman of the East African
+                      Securities Exchanges Association (EASEA), and Chief
+                      Executive Officer of the Rwanda Stock Exchange Ltd. He is
+                      also serving on a number of other boards and advisory
+                      boards within the financial sector in Rwanda, hospitality,
+                      and manufacturing industries where he serves as a non –
+                      Executive Director.
                     </p>
                     <p>
-                      With extensive experience in capital markets development
-                      and regional financial integration, Mr. Rwabukumba has
-                      been instrumental in fostering collaboration among African
-                      exchanges and promoting best practices across the
-                      continent.
+                      Over the past two decades, he has been involved in
+                      different investment projects ranging from manufacturing,
+                      Real Estate, Poultry and Agro-processing to Energy
+                      production. Mr. Rwabukumba started his career in financial
+                      services in New York City more than a two decades ago
+                      after graduating from the University of Buffalo (UB), New
+                      York in the United States with A bachelor's Degree in
+                      Economics.
+                    </p>
+                    <p>
+                      He worked in different professional positions as a
+                      stockbroker, in Compliance and Operations, Institutional
+                      Investors' Sales and Advisory before he joined the Central
+                      Bank of Rwanda in 2004 to help start the Capital Market
+                      Development Project in Rwanda. Mr. Rwabukumba is a
+                      seasoned negotiator as he has been instrumental in
+                      different negotiations on regional integration of the East
+                      African Community and the Economic Community of Central
+                      African States (ECAS).
+                    </p>
+                    <p>
+                      He has served on different Capital Market Committees both
+                      at the national and the regional level the latest being
+                      the High-Level Task Force negotiating the EAC Monetary
+                      Union and the EAC Regional Capital Markets Infrastructure
+                      (CMI) Steering Committee where he serves as Chair.
+                    </p>
+                    <p>
+                      Mr. Rwabukumba is an Alumni of a one-year international
+                      post-Graduate Advanced Management Program (AMP) for
+                      Executives run jointly by Strathmore Business School of
+                      Nairobi, the Lagos Business School, Pan- Atlantic
+                      University and IESE Business School, the University of
+                      Navara in Barcelona, Spain
                     </p>
                     <p>
                       At the ASEA Conference 2025, Mr. Rwabukumba will present
                       the strategic vision for African capital markets and
                       outline initiatives for deeper regional integration.
-                    </p>
-                    <h5>
-                      Session: "ASEA Vision 2030: Integrating African Capital
-                      Markets"
-                    </h5>
-                    <p>
-                      Date: November 26, 2025 | Time: 5:15 PM - 6:30 PM | Venue:
-                      Main Hall
                     </p>
                   </div>
                 </div>
