ASEA ESG Awards

--- a/awards.html
+++ b/awards.html
@@ -6,7 +6,7 @@
     <title>Pan-Africa ESG Awards 2025 - ASEA Conference</title>
     <meta
       name="description"
-      content="Inaugural Pan-Africa ESG Awards hosted by ASEA in collaboration with Risk Insights at the 28th ASEA Annual Conference, Kigali Rwanda, 26–28 Nov 2025."
+      content="Inaugural Pan-Africa ESG Awards hosted by ASEA in collaboration with ASEA ESG Awards at the 28th ASEA Annual Conference, Kigali Rwanda, 26–28 Nov 2025."
     />
 
     <!-- Favicon -->
@@ -780,15 +780,15 @@
           <div class="col-lg-7 mb-5 mb-lg-0">
             <p class="lead-paragraph fade-in-up">
               AFRICAN SECURITIES EXCHANGES ASSOCIATION (ASEA) IN COLLABORATION
-              WITH RISK INSIGHTS TO HOST THE INAUGURAL PAN-AFRICA ESG AWARDS.
+              WITH ASEA ESG Awards TO HOST THE INAUGURAL PAN-AFRICA ESG AWARDS.
             </p>
             <p>
               The African Securities Exchanges Association (ASEA) proudly
-              announces its strategic partnership with Risk Insights, a premier
-              provider of innovative ESG Data and Ratings solutions for Africa,
-              to present the inaugural Pan-Africa ESG Awards during the Annual
-              Conference of ASEA in Kigali, Rwanda from 26th – 28th November
-              2025.
+              announces its strategic partnership with ASEA ESG Awards, a
+              premier provider of innovative ESG Data and Ratings solutions for
+              Africa, to present the inaugural Pan-Africa ESG Awards during the
+              Annual Conference of ASEA in Kigali, Rwanda from 26th – 28th
+              November 2025.
             </p>
             <p class="fade-in-up" style="animation-delay: 0.1s">
               This landmark event represents a pivotal moment in recognizing and
@@ -848,7 +848,7 @@
           <div class="col-12">
             <div class="section-header">
               <h2>Leadership Voices</h2>
-              <p>Statements from ASEA and Risk Insights</p>
+              <p>Statements from ASEA and ASEA ESG Awards</p>
             </div>
           </div>
         </div>
@@ -856,7 +856,7 @@
           <div class="col-md-6">
             <div class="quote fade-in-up">
               <blockquote>
-                “We are proud to partner with Risk Insights for the inaugural
+                “We are proud to partner with ASEA ESG Awards for the inaugural
                 Pan-Africa ESG Awards. This initiative reflects ASEA’s ongoing
                 commitment to advancing ESG integration, fostering responsible
                 investment, and positioning African capital markets as engines
@@ -865,24 +865,11 @@
               <footer>PIERRE CELESTIN RWABUKUMBA – PRESIDENT, ASEA</footer>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="quote fade-in-up" style="animation-delay: 0.15s">
-              <blockquote>
-                “We are honoured to collaborate with the African Securities
-                Exchanges Association on this historic initiative to spotlight
-                Africa’s ESG leadership. This partnership reinforces our mission
-                to deliver impactful, data-driven ESG solutions that empower
-                African markets and businesses to lead with transparency,
-                sustainability, and innovation.”
-              </blockquote>
-              <footer>Dr Daniel Matjila - Director, Risk Insights</footer>
-            </div>
-          </div>
         </div>
       </div>
     </section>
 
-    <!-- Risk Insights & ESG Focus -->
+    <!-- ASEA ESG Awards & ESG Focus -->
     <section class="section">
       <div class="container">
         <div class="row">
@@ -890,7 +877,7 @@
             <h3 class="subheading">Data-Driven Integrity</h3>
             <p>
               Through its groundbreaking ESG GPS™ platform and strategic
-              alliances, Risk Insights continues to lead the integration of
+              alliances, ASEA ESG Awards continues to lead the integration of
               artificial intelligence and big data into ESG and risk evaluation,
               enabling organizations across Africa to master the dynamic
               sustainability environment.
