--- a/judges.html
+++ b/judges.html
@@ -1297,8 +1297,8 @@
                     (2018 – 2024)
                   </li>
                   <li>
-                    Chairman, Nigeria Ratings for Risk Insights ESG GPS (2021 -
-                    2024)
+                    Chairman, Nigeria Ratings for ASEA ESG Awards ESG GPS (2021
+                    - 2024)
                   </li>
                   <li>
                     INED – Saro Oil Palm Limited – Chairman, Board Finance,
