ASEA ESG Awards

--- a/judges.html
+++ b/judges.html
@@ -986,15 +986,13 @@
                 <h3>Mr. Pierre Celestin RWABUKUMBA</h3>
                 <h4>President of ASEA & CEO of Rwanda Stock Exchange</h4>
                 <p>
-                  Current President of ASEA and Chairman of EASEA. Over two
-                  decades of experience in financial services and capital
-                  markets development.
+                  Current President of ASEA and CEO of Rwanda Stock Exchange.
                 </p>
                 <a
                   href="#"
                   class="judge-btn"
                   data-toggle="modal"
-                  data-target="#judgeModal2"
+                  data-target="judgeModal"
                 >
                   View Profile
                 </a>
