--- a/judges.html
+++ b/judges.html
@@ -992,7 +992,7 @@
                   href="#"
                   class="judge-btn"
                   data-toggle="modal"
-                  data-target="judgeModal"
+                  data-target="#judgeModal2"
                 >
                   View Profile
                 </a>
@@ -1353,78 +1353,32 @@
               </div>
               <div class="col-md-9">
                 <h5>Current Positions</h5>
-                <ul>
-                  <li>
-                    President of the African Securities Exchanges Association
-                    (ASEA)
-                  </li>
-                  <li>
-                    Chairman of the East African Securities Exchanges
-                    Association (EASEA)
-                  </li>
-                  <li>
-                    Chief Executive Officer of the Rwanda Stock Exchange Ltd.
-                  </li>
-                  <li>
-                    President of the World Veterans Club Championship (VCWV)
-                    Business Club
-                  </li>
-                  <li>Co-founder and Chairman of Kigali Cement Company</li>
-                </ul>
+                <p>
+                  Mr. Rwabukumba is the Chairman of the African Securities Exchanges Association (ASEA) and Chief Executive Officer of the Rwanda Stock Exchange Ltd. He is also a non-Executive Director in several institutions in finance and business development, hospitality, academia and industry in Rwanda and beyond.
+                </p>
 
                 <h5>Professional Background</h5>
                 <p>
-                  Mr. Pierre Celestin RWABUKUMBA is a Rwandan national with over
-                  two decades of experience in financial services. He started
-                  his career in financial services in New York City after
-                  graduating from the University of Buffalo (UB), New York with
-                  a bachelor's degree in economics.
+                  He has over two decades of experience in financial markets services starting in New York City working in different professional positions as a stockbroker, in compliance and Operations, Institutional Investors' Sales and Advisory before joining the Central Bank of Rwanda in 2004 to help start the capital market development in Rwanda.
                 </p>
 
+                <h5>Key Achievements & roles</h5>
                 <p>
-                  He worked in different professional positions as a
-                  stockbroker, in Compliance and Operations, Institutional
-                  Investors' Sales and Advisory before joining the Central Bank
-                  of Rwanda in 2004 to help start the Capital Market Development
-                  Project in Rwanda.
+                  He has been instrumental in the creation of the capital market in Rwanda since inception and at the canter of the larger EAC region as Chairman of the East African Securities Exchanges Association (EASEA) and was instrumental in high level negotiations on regional integration in the East African Community and the Economic Community of Central African States (ECAS). He has served on different Capital Market Committees both at the national, regional and international levels the latest being Africa Exchanges Linkage (AELP) project where he chairs the Steering Committee, the High-Level Task Force negotiating the EAC Monetary Union and the EAC Regional Capital Markets Infrastructure (CMI) Steering Committee where he serves as Chair.
                 </p>
 
-                <h5>Key Achievements & Roles</h5>
+                <h5>Business interests</h5>
                 <p>
-                  Mr. Rwabukumba is a seasoned negotiator who has been
-                  instrumental in different negotiations on regional integration
-                  of the East African Community and the Economic Community of
-                  Central African States (ECAS). He has served on different
-                  Capital Market Committees both at the national and regional
-                  level, including the High-Level Task Force negotiating the EAC
-                  Monetary Union and the EAC Regional Capital Markets
-                  Infrastructure (CMI) Steering Committee where he serves as
-                  Chair.
-                </p>
-
-                <h5>Business Interests</h5>
-                <p>
-                  Beyond his roles in capital markets, he serves on several
-                  boards and advisory boards within the financial sector in
-                  Rwanda, hospitality, education, and manufacturing industries
-                  as a non-Executive Director. He is involved in different
-                  investment projects ranging from Real Estate, Poultry,
-                  Agro-processing, and manufacturing to Energy production.
+                  Beyond his roles in capital markets, he serves on different boards and advisory boards within the financial services sector in Rwanda and beyond. He has also been involved in different investment projects ranging from Real Estate, Poultry and Agro – processing, manufacturing to Energy.
                 </p>
 
                 <h5>Education</h5>
-                <ul>
-                  <li>
-                    Bachelor's degree in Economics - University of Buffalo (UB),
-                    New York, United States
-                  </li>
-                  <li>
-                    Alumni of Advanced Management Program (AMP) for Executives -
-                    joint program by Strathmore Business School (Nairobi), Lagos
-                    Business School (Pan-Atlantic University), and IESE Business
-                    School (University of Navara, Barcelona, Spain)
-                  </li>
-                </ul>
+                <p>
+                  Graduate from the State University of Buffalo (UB), New York in the United States with A bachelor's degree in economics
+                </p>
+                <p>
+                  Alumni of a one-year international post-Graduate Advanced Management Program (AMP) for Executives run jointly by Strathmore Business School of Nairobi, the Lagos Business School, Pan- Atlantic University and IESE Business School, the University of Navara in Barcelona, Spain.
+                </p>
               </div>
             </div>
           </div>
