--- a/speakers.html
+++ b/speakers.html
@@ -2640,7 +2640,7 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="speaker-modal-image">
-                  <img src="img/speakers/bob-karina.jpg" alt="Bob Karina" />
+                  <img src="img/speakers/Bob Karina.jpg" alt="Bob Karina" />
                 </div>
                 <div class="speaker-modal-social">
                   <a href="#"><i class="fa fa-linkedin"></i></a>
