--- a/index.html
+++ b/index.html
@@ -1149,6 +1149,9 @@
                         >Award Details</a
                       >
                       <a class="dropdown-item" href="judges.html">Judges</a>
+                      <a class="dropdown-item" href="awards-sponsorship.html"
+                        >Sponsorship</a
+                      >
                     </div>
                   </li>
                   <li class="nav-item">
@@ -1389,7 +1392,7 @@
           <div class="host-item">
             <span class="host-label">FEATURING</span>
             <img
-              src="img/core-img/logo esggps with TM.png"
+              src="img/core-img/esg-awards.png"
               alt="Pan-Africa ESG Awards"
             />
           </div>
