--- a/schedule.html
+++ b/schedule.html
@@ -707,6 +707,9 @@
                         >Award Details</a
                       >
                       <a class="dropdown-item" href="judges.html">Judges</a>
+                      <a class="dropdown-item" href="awards-sponsorship.html"
+                        >Sponsorship</a
+                      >
                     </div>
                   </li>
                   <li class="nav-item">
