--- a/awards-sponsorship.html
+++ b/awards-sponsorship.html
@@ -83,6 +83,13 @@
         background: #fff;
         box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
         padding: 5px 0;
+        height: 130px !important;
+        overflow: visible;
+      }
+      .header-area .container,
+      .header-area .row,
+      .header-area .col-12 {
+        height: 100%;
       }
       .logo img {
         max-height: 120px;
@@ -91,6 +98,8 @@
         padding: 0;
         display: flex;
         justify-content: space-between;
+        height: 100%;
+        align-items: center;
       }
       .navbar-collapse {
         justify-content: flex-end;
@@ -100,39 +109,129 @@
           display: flex !important;
         }
         .navbar-expand-lg .navbar-toggler {
-          display: none !important;
+          display: none;
         }
         .navbar-expand-lg .navbar-nav {
           flex-direction: row;
+          margin: 0 !important;
+          height: auto;
         }
-        .navbar-expand-lg .navbar-nav .dropdown-menu {
+        .nav-item {
+          margin: 0 10px;
+          position: relative;
+          height: auto;
+        }
+        .nav-item.dropdown {
+          position: relative;
+          height: auto;
+        }
+        .nav-link {
+          padding: 25px 10px !important;
+          font-weight: 600;
+          font-size: 12px;
+          color: var(--primary-color);
+          text-transform: uppercase;
+          height: auto;
+          line-height: normal;
+        }
+
+        /* Dropdown Styles */
+        .nav-item.dropdown {
+          position: static;
+        }
+        .dropdown-menu {
           position: absolute;
+          top: 130px !important;
+          left: auto !important;
+          right: auto !important;
+          z-index: 1050;
+          display: none;
+          float: none;
+          background: white;
+          border: none;
+          box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+          border-radius: 10px;
+          padding: 8px 0;
+          margin-top: 0;
+          min-width: 180px;
+          border: 1px solid rgba(0, 0, 0, 0.05);
+          transform: none;
         }
-        .navbar-expand-lg .navbar-nav .nav-link {
-          padding-right: 1rem;
-          padding-left: 1rem;
+        .dropdown-menu.show {
+          display: block;
+        }
+        .dropdown-item {
+          padding: 12px 20px;
+          font-weight: 600;
+          font-size: 11px;
+          color: var(--primary-color);
+          text-transform: uppercase;
+          letter-spacing: 0.5px;
+          transition: all 0.3s ease;
+          position: relative;
+          display: block;
+          width: 100%;
+          clear: both;
+          text-align: inherit;
+          white-space: nowrap;
+          background-color: transparent;
+          border: 0;
+        }
+        .dropdown-item:hover,
+        .dropdown-item:focus {
+          background: linear-gradient(
+            135deg,
+            var(--primary-color),
+            var(--accent-color)
+          );
+          color: white;
+          text-decoration: none;
+          transform: translateX(3px);
+        }
+        .dropdown-item:active {
+          background: var(--secondary-color);
+          color: white;
+        }
+        .nav-item.dropdown:hover .dropdown-menu {
+          display: block;
+          animation: dropdownFadeIn 0.3s ease;
+        }
+        .dropdown-toggle::after {
+          border-top: 0.3em solid;
+          border-right: 0.3em solid transparent;
+          border-bottom: 0;
+          border-left: 0.3em solid transparent;
+          margin-left: 0.5em;
+        }
+
+        @keyframes dropdownFadeIn {
+          from {
+            opacity: 0;
+            transform: translateY(-10px);
+          }
+          to {
+            opacity: 1;
+            transform: translateY(0);
+          }
+        }
+      }
+      @media (max-width: 991.98px) {
+        .navbar-toggler {
+          padding: 10px;
+          background-color: white;
+        }
+        .navbar-toggler-icon {
+          background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 104, 55, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
         }
       }
       .navbar-nav {
         align-items: center;
       }
-      .nav-link {
-        color: var(--text-color) !important;
-        font-weight: 600;
-        font-size: 14px;
-        text-transform: uppercase;
-        letter-spacing: 1px;
-        padding: 15px 20px !important;
-        transition: all 0.3s ease;
-        position: relative;
-      }
       .nav-link:hover,
-      .nav-item.active .nav-link,
-      .dropdown-item.active,
-      .dropdown-item:active {
+      .nav-item.active .nav-link {
         color: var(--secondary-color) !important;
       }
-      .nav-link::after {
+      .nav-link:not(.dropdown-toggle)::after {
         content: '';
         position: absolute;
         bottom: 8px;
@@ -143,33 +242,35 @@
         transition: all 0.3s ease;
         transform: translateX(-50%);
       }
-      .nav-link:hover::after,
-      .nav-item.active .nav-link::after {
+      .nav-link:not(.dropdown-toggle):hover::after,
+      .nav-item.active .nav-link:not(.dropdown-toggle)::after {
         width: 20px;
       }
       .register-btn {
-        background: linear-gradient(45deg, var(--secondary-color), #ff6b35);
+        background-color: #dc4405;
         color: white;
-        padding: 12px 25px;
-        border-radius: 50px;
+        padding: 12px 30px;
         font-weight: 600;
-        text-decoration: none;
+        font-size: 14px;
         text-transform: uppercase;
-        letter-spacing: 1px;
+        border-radius: 30px;
+        text-decoration: none;
         transition: all 0.3s ease;
+        display: inline-block;
         margin-left: 20px;
-        box-shadow: 0 5px 15px rgba(220, 68, 5, 0.3);
       }
       .register-btn:hover {
-        background: linear-gradient(
-          45deg,
-          var(--accent-color),
-          var(--primary-color)
-        );
-        transform: translateY(-3px);
-        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+        background-color: #c43c00;
         color: white;
         text-decoration: none;
+        transform: translateY(-3px);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+      }
+      @media (max-width: 991px) {
+        .register-btn {
+          margin-top: 15px;
+          margin-left: 0;
+        }
       }
 
       /* Page Hero */
@@ -187,7 +288,6 @@
         text-align: center;
         color: white;
         position: relative;
-        margin-top: 120px;
       }
 
       .page-hero-overlay {
@@ -441,49 +541,122 @@
 
       /* Footer */
       .footer-area {
-        background-color: var(--dark-color);
-        color: white;
-        padding: 60px 0 20px;
+        background: var(--dark-color);
+        color: #aaa;
+        padding: 70px 0 0;
       }
-
-      .footer-content {
-        text-align: center;
+      .footer-widget {
         margin-bottom: 40px;
       }
-
-      .footer-logo img {
-        max-height: 80px;
-        margin-bottom: 20px;
-      }
-
-      .footer-text {
-        max-width: 600px;
-        margin: 0 auto 30px;
-        opacity: 0.8;
-        line-height: 1.6;
-      }
-
-      .social-links {
-        margin-bottom: 30px;
-      }
-
-      .social-links a {
+      .footer-widget h4 {
         color: white;
-        font-size: 1.5rem;
-        margin: 0 15px;
-        transition: all 0.3s ease;
+        margin-bottom: 25px;
+        position: relative;
+        padding-bottom: 15px;
+        font-size: 1.4rem;
       }
-
-      .social-links a:hover {
+      .footer-widget h4:after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        width: 50px;
+        height: 2px;
+        background: var(--secondary-color);
+      }
+      .footer-links {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+      }
+      .footer-links li {
+        margin-bottom: 10px;
+      }
+      .footer-links li a {
+        color: #aaa;
+        transition: all 0.3s;
+        text-decoration: none;
+        position: relative;
+        padding-left: 15px;
+        display: block;
+      }
+      .footer-links li a:before {
+        content: '\f105';
+        font-family: 'Font Awesome 6 Free';
+        font-weight: 900;
+        position: absolute;
+        left: 0;
+        top: 0;
         color: var(--secondary-color);
+      }
+      .footer-links li a:hover {
+        color: white;
+        padding-left: 20px;
+      }
+      .footer-info p {
+        margin-bottom: 15px;
+        position: relative;
+        padding-left: 25px;
+      }
+      .footer-info p i {
+        position: absolute;
+        left: 0;
+        top: 5px;
+        color: var(--secondary-color);
+      }
+      .footer-social a {
+        display: inline-block;
+        width: 40px;
+        height: 40px;
+        background: rgba(255, 255, 255, 0.1);
+        color: white;
+        text-align: center;
+        line-height: 40px;
+        border-radius: 50%;
+        margin-right: 10px;
+        transition: all 0.3s;
+      }
+      .footer-social a:hover {
+        background: var(--secondary-color);
         transform: translateY(-3px);
       }
-
-      .footer-bottom {
-        border-top: 1px solid rgba(255, 255, 255, 0.1);
-        padding-top: 20px;
+      .footer-newsletter {
+        display: flex;
+        position: relative;
+      }
+      .footer-newsletter input {
+        background: rgba(255, 255, 255, 0.1);
+        border: none;
+        border-radius: 50px;
+        padding: 12px 20px;
+        width: 100%;
+        color: white;
+      }
+      .footer-newsletter input::placeholder {
+        color: rgba(255, 255, 255, 0.5);
+      }
+      .footer-newsletter button {
+        position: absolute;
+        right: 5px;
+        top: 5px;
+        background: var(--secondary-color);
+        border: none;
+        border-radius: 50%;
+        width: 35px;
+        height: 35px;
+        color: white;
+        transition: all 0.3s;
+      }
+      .footer-newsletter button:hover {
+        background: var(--accent-color);
+        transform: scale(1.1);
+      }
+      .copyright {
+        background: rgba(0, 0, 0, 0.2);
+        padding: 15px 0;
+        margin-top: 30px;
         text-align: center;
-        opacity: 0.6;
+        color: rgba(255, 255, 255, 0.7);
       }
 
       /* Responsive */
@@ -505,28 +678,6 @@
         .cta-section h3 {
           font-size: 2rem;
         }
-      }
-
-      /* Dropdown Styles */
-      .dropdown-menu {
-        border: none;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-        border-radius: 10px;
-        padding: 15px 0;
-        margin-top: 15px;
-      }
-
-      .dropdown-item {
-        color: var(--text-color);
-        padding: 10px 25px;
-        font-weight: 500;
-        transition: all 0.3s ease;
-      }
-
-      .dropdown-item:hover,
-      .dropdown-item:focus {
-        background-color: var(--light-color);
-        color: var(--secondary-color);
       }
     </style>
   </head>
@@ -578,6 +729,7 @@
                       href="#"
                       id="esgDropdown"
                       role="button"
+                      data-bs-toggle="dropdown"
                       data-toggle="dropdown"
                       aria-haspopup="true"
                       aria-expanded="false"
@@ -692,27 +844,84 @@
             <table class="table sponsorship-table mb-0">
               <thead>
                 <tr>
-                  <th style="text-align: left; width: 25%">Benefits</th>
-                  <th style="background-color: #8b4513">
-                    Bronze<br /><small>USD 40,000</small>
+                  <th
+                    style="
+                      text-align: left;
+                      width: 25%;
+                      background-color: var(--primary-color);
+                      color: white;
+                    "
+                  >
+                    Benefits
                   </th>
-                  <th style="background-color: #c0c0c0">
-                    Silver<br /><small>USD 30,000</small>
+                  <th
+                    style="
+                      background-color: #8b4513;
+                      color: white;
+                      font-weight: bold;
+                    "
+                  >
+                    Bronze<br /><small style="color: #ffd4c4">USD 40,000</small>
                   </th>
-                  <th style="background-color: #ffd700">
-                    Gold<br /><small>USD 25,000</small>
+                  <th
+                    style="
+                      background-color: #808080;
+                      color: white;
+                      font-weight: bold;
+                    "
+                  >
+                    Silver<br /><small style="color: #e0e0e0">USD 30,000</small>
                   </th>
-                  <th style="background-color: #e5e4e2">
-                    Platinum<br /><small>USD 20,000</small>
+                  <th
+                    style="
+                      background-color: #ffa500;
+                      color: white;
+                      font-weight: bold;
+                    "
+                  >
+                    Gold<br /><small style="color: #fff5cc">USD 25,000</small>
                   </th>
-                  <th style="background-color: #40e0d0">
-                    Diamond<br /><small>USD 15,000</small>
+                  <th
+                    style="
+                      background-color: #4a4a4a;
+                      color: white;
+                      font-weight: bold;
+                    "
+                  >
+                    Platinum<br /><small style="color: #d0d0d0"
+                      >USD 20,000</small
+                    >
                   </th>
-                  <th style="background-color: #b87333">
-                    Copper<br /><small>USD 5,000</small>
+                  <th
+                    style="
+                      background-color: #1e90ff;
+                      color: white;
+                      font-weight: bold;
+                    "
+                  >
+                    Diamond<br /><small style="color: #cce7ff"
+                      >USD 15,000</small
+                    >
                   </th>
-                  <th style="background-color: #ffe135">
-                    Sunshine<br /><small>USD 3,000</small>
+                  <th
+                    style="
+                      background-color: #d2691e;
+                      color: white;
+                      font-weight: bold;
+                    "
+                  >
+                    Copper<br /><small style="color: #f4e4d6">USD 5,000</small>
+                  </th>
+                  <th
+                    style="
+                      background-color: #ff8c00;
+                      color: white;
+                      font-weight: bold;
+                    "
+                  >
+                    Sunshine<br /><small style="color: #ffe6cc"
+                      >USD 3,000</small
+                    >
                   </th>
                 </tr>
               </thead>
@@ -1024,44 +1233,93 @@
       </div>
     </section>
 
-    <!-- Footer -->
+    <!-- Footer Start -->
     <footer class="footer-area">
       <div class="container">
-        <div class="footer-content">
-          <div class="footer-logo">
-            <img src="img/core-img/ASEA-LOGO.png" alt="ASEA Logo" />
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <div class="footer-widget footer-info">
+              <img
+                src="img/members/logo_asea_white.png"
+                alt="ASEA Logo"
+                class="mb-4"
+                style="max-height: 60px"
+              />
+              <p>
+                The African Securities Exchanges Association (ASEA) is the
+                premier association of securities exchanges in Africa.
+              </p>
+              <div class="footer-social">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+              </div>
+            </div>
           </div>
-          <div class="footer-text">
-            <p>
-              The African Securities Exchanges Association (ASEA) is committed
-              to developing and integrating African capital markets through
-              collaboration, best practice sharing, and sustainable finance
-              initiatives.
-            </p>
+          <div class="col-lg-3 col-md-6">
+            <div class="footer-widget">
+              <h4>Quick Links</h4>
+              <ul class="footer-links">
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="speakers.html">Speakers</a></li>
+                <li><a href="schedule.html">Schedule</a></li>
+                <li>
+                  <a
+                    href="https://the28thaseaa2afd.ev.smartevent.rw/RegisterIframe/en"
+                    target="_blank"
+                    >Registration</a
+                  >
+                </li>
+                <li><a href="contact.html">Contact Us</a></li>
+              </ul>
+            </div>
           </div>
-          <div class="social-links">
-            <a href="#" aria-label="Facebook"
-              ><i class="fab fa-facebook-f"></i
-            ></a>
-            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="#" aria-label="LinkedIn"
-              ><i class="fab fa-linkedin-in"></i
-            ></a>
-            <a href="#" aria-label="Instagram"
-              ><i class="fab fa-instagram"></i
-            ></a>
+          <div class="col-lg-3 col-md-6">
+            <div class="footer-widget">
+              <h4>Contact Info</h4>
+              <p><i class="fas fa-map-marker-alt"></i> Kigali, Rwanda</p>
+              <p><i class="fas fa-phone-alt"></i> +250 788 123 456</p>
+              <p><i class="fas fa-envelope"></i> info@asea-conference.org</p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="footer-widget">
+              <h4>Subscribe</h4>
+              <p>Stay updated with the latest news and announcements</p>
+              <form class="footer-newsletter">
+                <input type="email" placeholder="Your Email" />
+                <button type="submit">
+                  <i class="fas fa-paper-plane"></i>
+                </button>
+              </form>
+            </div>
           </div>
         </div>
-        <div class="footer-bottom">
-          <p>&copy; 2025 ASEA. All rights reserved.</p>
+      </div>
+      <div class="copyright">
+        <div class="container">
+          <p>&copy; 2025 ASEA Conference. All Rights Reserved.</p>
         </div>
       </div>
     </footer>
+    <!-- Footer End -->
 
     <!-- JS Libraries -->
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/confer.bundle.js"></script>
+    <script>
+      // Sticky Header shrink
+      window.addEventListener('scroll', function () {
+        const header = document.querySelector('.header-area');
+        if (window.scrollY > 100) {
+          header.classList.add('header-shrink');
+        } else {
+          header.classList.remove('header-shrink');
+        }
+      });
+    </script>
   </body>
 </html>
