speakers and sponsors

--- a/sponsors.html
+++ b/sponsors.html
@@ -780,6 +780,20 @@
                     class="sponsor-logo"
                   />
                 </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/I&M Bank Rwanda.png"
+                    alt="I&M Bank Rwanda"
+                    class="sponsor-logo"
+                  />
+                </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/Equity Group.png"
+                    alt="Equity Group"
+                    class="sponsor-logo"
+                  />
+                </div>
               </div>
             </div>
           </div>
