--- a/judges.html
+++ b/judges.html
@@ -488,8 +488,8 @@
 
       .judge-category {
         position: absolute;
-        top: 15px;
-        right: 15px;
+        bottom: 15px;
+        left: 15px;
         background: var(--secondary-color);
         color: white;
         padding: 5px 12px;
@@ -498,6 +498,7 @@
         font-weight: 600;
         text-transform: uppercase;
         letter-spacing: 0.5px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
       }
 
       /* Call to Action */
