--- a/sponsors.html
+++ b/sponsors.html
@@ -794,6 +794,13 @@
                     class="sponsor-logo"
                   />
                 </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/Mahwi.png"
+                    alt="Mahwi"
+                    class="sponsor-logo"
+                  />
+                </div>
               </div>
             </div>
           </div>
