--- a/sponsors.html
+++ b/sponsors.html
@@ -801,6 +801,41 @@
                     class="sponsor-logo"
                   />
                 </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/Baraka Capital.png"
+                    alt="Baraka Capital"
+                    class="sponsor-logo"
+                  />
+                </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/Faida Investment Bank.png"
+                    alt="Faida Investment Bank"
+                    class="sponsor-logo"
+                  />
+                </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/Mo Capital Ltd.png"
+                    alt="Mo Capital Ltd"
+                    class="sponsor-logo"
+                  />
+                </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/CDH Capital.png"
+                    alt="CDH Capital"
+                    class="sponsor-logo"
+                  />
+                </div>
+                <div class="sponsor-logo-container">
+                  <img
+                    src="img/sponsors/BK Capital.png"
+                    alt="BK Capital"
+                    class="sponsor-logo"
+                  />
+                </div>
               </div>
             </div>
           </div>
