removed risk insights from sponsorship section

--- a/awards-sponsorship.html
+++ b/awards-sponsorship.html
@@ -1185,9 +1185,8 @@
             <div>
               <h5>AI-Powered ESG Carbon Training</h5>
               <p>
-                Cutting-edge AI-powered ESG carbon training for 1 person
-                provided by Risk Insights, demonstrating your commitment to
-                sustainability innovation.
+                Cutting-edge AI-powered ESG carbon training for 1 person,
+                demonstrating your commitment to sustainability innovation.
               </p>
             </div>
           </div>
