--- a/speakers.html
+++ b/speakers.html
@@ -1431,6 +1431,38 @@
               </div>
             </div>
           </div>
+
+          <!-- Speaker 18: Dr. Hosea Kili, MBS -->
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="speaker-card" data-category="ceo">
+              <div class="speaker-image">
+                <img src="img/speakers/DR. HOSEA KILI, MBS.jpg" alt="Dr. Hosea Kili, MBS" />
+             
+                <div class="speaker-overlay">
+                  <div class="speaker-social">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fas fa-globe"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="speaker-info">
+                <h3>Dr. Hosea Kili, MBS</h3>
+                <h4>
+                  Group Managing Director/CEO, CPF Group & President, APTAK
+                </h4>
+
+                <a
+                  href="#"
+                  class="speaker-btn"
+                  data-toggle="modal"
+                  data-target="#speakerModal18"
+                >
+                  View Profile
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -2825,6 +2857,69 @@
                     </p>
                     <p>
                       He serves on multiple boards including the Anti-Money Laundering Unit, Egyptian Arab Land Bank (Chair of Risk Committee), and various corporate boards across different sectors. Dr. Azzam holds a Ph.D. in Economics from UC Irvine with specialization in econometrics, economic forecasting, and monetary policy, along with degrees from University of Pennsylvania, AUC, and Cairo University.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal 18: Dr. Hosea Kili, MBS -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModal18"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/DR. HOSEA KILI, MBS.jpg"
+                    alt="Dr. Hosea Kili, MBS"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-facebook"></i></a>
+                  <a href="#"><i class="fa fa-globe"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Dr. Hosea Kili, MBS</h3>
+                  <h4>Group Managing Director/CEO, CPF Group & President, APTAK</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Dr. Hosea Kili, MBS is an advocate of the High Court of Kenya and Group Managing Director/CEO of CPF Group. He holds a Masters of Business Administration from the Management College of Southern Africa (MANCOSA) and is a Fellow of the Institute of Certified Public Secretaries of Kenya (ICPSK), Fellow Member of Kenya Institute of Management (KIM), and active member of the Law Society of Kenya (LSK).
+                    </p>
+                    <p>
+                      Currently serving as President of the Association of Pension Trustees & Administrators of Kenya (APTAK) and the Pack Hunters Club (PHC), Dr. Kili is also a Council member of the Africa Social Security Association (ASSA). He previously served as a Non-Executive Director at the Nairobi Securities Exchange (NSE) and is a Council member of the Kenya National Real Estate Investment Trust (REIT).
+                    </p>
+                    <p>
+                      A recipient of numerous national honors, Dr. Kili was awarded the Moran of the Order of the Burning Spear (MBS) in 2025 and the Presidential Order of Grand Warrior (OGW) in 2011. He was named 2nd Runners up CEO of the Year at the COYA Awards 2012 and recognized as Personality of the Year at the 2023 and 2017 Pension Awards for excellence in innovation and service provision.
+                    </p>
+                    <p>
+                      Dr. Kili was also recognized as 2nd Runners up in the 'CEO of the Year' category during the 2024, 2018 and 2017 Champions of Governance Awards. He previously served as a member of the International Social Security Association (ISSA) bureau and Finance Committee from 2019-2022, demonstrating his international expertise in social security and pension fund management.
                     </p>
                   </div>
                 </div>
