--- a/speakers.html
+++ b/speakers.html
@@ -1436,7 +1436,7 @@
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="speaker-card" data-category="ceo">
               <div class="speaker-image">
-                <img src="img/speakers/DR. HOSEA KILI, MBS.jpg" alt="Dr. Hosea Kili, MBS" />
+                <img src="img/speakers/DR. HOSEA KILI, MBS.jpeg" alt="Dr. Hosea Kili, MBS" />
              
                 <div class="speaker-overlay">
                   <div class="speaker-social">
@@ -1457,6 +1457,38 @@
                   class="speaker-btn"
                   data-toggle="modal"
                   data-target="#speakerModal18"
+                >
+                  View Profile
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Speaker 19: Rami El Dokany -->
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="speaker-card" data-category="capital-markets">
+              <div class="speaker-image">
+                <img src="img/speakers/Rami.jpg" alt="Rami El Dokany" />
+             
+                <div class="speaker-overlay">
+                  <div class="speaker-social">
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fas fa-globe"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="speaker-info">
+                <h3>Rami El Dokany</h3>
+                <h4>
+                  Executive Chairman, Egyptian Exchange & Head of Arab Federation of Exchanges
+                </h4>
+
+                <a
+                  href="#"
+                  class="speaker-btn"
+                  data-toggle="modal"
+                  data-target="#speakerModal19"
                 >
                   View Profile
                 </a>
@@ -2893,7 +2925,7 @@
               <div class="col-md-4">
                 <div class="speaker-modal-image">
                   <img
-                    src="img/speakers/DR. HOSEA KILI, MBS.jpg"
+                    src="img/speakers/DR. HOSEA KILI, MBS.jpeg"
                     alt="Dr. Hosea Kili, MBS"
                   />
                 </div>
@@ -2920,6 +2952,69 @@
                     </p>
                     <p>
                       Dr. Kili was also recognized as 2nd Runners up in the 'CEO of the Year' category during the 2024, 2018 and 2017 Champions of Governance Awards. He previously served as a member of the International Social Security Association (ISSA) bureau and Finance Committee from 2019-2022, demonstrating his international expertise in social security and pension fund management.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal 19: Rami El Dokany -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModal19"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Rami.jpg"
+                    alt="Rami El Dokany"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-facebook"></i></a>
+                  <a href="#"><i class="fa fa-globe"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Rami El Dokany</h3>
+                  <h4>Executive Chairman, Egyptian Exchange & Head of Arab Federation of Exchanges</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Rami El Dokany is an investment professional with over 20 years of experience in private equity investments, investment banking and corporate business planning. Currently serving as Executive Chairman of the Egyptian Exchange, he leads one of the most significant capital markets in the Middle East and North Africa region, overseeing market development, regulation, and strategic initiatives.
+                    </p>
+                    <p>
+                      As Head of Arab Federation of Exchanges, Rami leads the industry association that includes 17 exchanges, 4 clearing houses and several industry players, with total market capitalization above USD 3.2 billion. This role involves coordinating regional capital market development and promoting best practices across Arab markets.
+                    </p>
+                    <p>
+                      He is actively involved in fintech innovation, investing in fintech startups in Egypt and contributing to the digital transformation of financial services. Rami founded Inclusion, a digital payments platform for businesses, and Pride Capital, an investment fund supporting promising startups and entrepreneurship innovation.
+                    </p>
+                    <p>
+                      Rami holds an MSc degree in Finance and M&As from the University of Wales, along with diplomas in Investments and Feasibility Studies from Cairo. He serves on various boards including BM Lease and the Insurance Holding Company, and works as a consultant to the World Bank on international development finance initiatives.
                     </p>
                   </div>
                 </div>
