--- a/speakers.html
+++ b/speakers.html
@@ -1468,7 +1468,7 @@
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="speaker-card" data-category="capital-markets">
               <div class="speaker-image">
-                <img src="img/speakers/Rami.jpg" alt="Rami El Dokany" />
+                <img src="img/speakers/Rami.jpeg" alt="Rami El Dokany" />
              
                 <div class="speaker-overlay">
                   <div class="speaker-social">
@@ -2988,7 +2988,7 @@
               <div class="col-md-4">
                 <div class="speaker-modal-image">
                   <img
-                    src="img/speakers/Rami.jpg"
+                    src="img/speakers/Rami.jpeg"
                     alt="Rami El Dokany"
                   />
                 </div>
