--- a/speakers.html
+++ b/speakers.html
@@ -1311,7 +1311,7 @@
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="speaker-card" data-category="global">
               <div class="speaker-image">
-                <img src="img/speakers/Nandini.jpg" alt="Nandini Sukumar" />
+                <img src="img/speakers/Nandini-Sukumar.png" alt="Nandini Sukumar" />
                
                 <div class="speaker-overlay">
                   <div class="speaker-social">
@@ -1621,7 +1621,7 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="speaker-modal-image">
-                  <img src="img/speakers/Nandini.jpg" alt="Nandini Sukumar" />
+                  <img src="img/speakers/Nandini-Sukumar.png" alt="Nandini Sukumar" />
                 </div>
                 <div class="speaker-modal-social">
                   <a href="#"><i class="fa fa-linkedin"></i></a>
